# adaptation-atlas-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  docker-compose.yml  package-lock.json  prompt-evals.md  pyproject.toml
.chainlit/: config.toml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  chainlit.md  logging.yaml  openapi.json  pyproject.toml
backend/chainlit/: app.py
backend/data/stac/: GLW3_livestock_noPQ.json  admin0_simplified.json  admin1_simplified.json  haz_risk_severe2.json  hazard_timeseries_annual_parquets.json  intersected_extremehazard_risk_vop_annual_parquet.json  intersected_extremehazard_risk_vop_seasonal_parquet.json  intersected_moderatehazard_risk_seasonal_parquet.json  intersected_moderatehazard_risk_vop_annual_parquet.json  intersected_moderatehazard_risk_vop_seasonal_parquet.json  intersected_severehazard_risk_vop_annual_parquet.json  pop_2020_parquet.json  solo_moderatehazard_risk_seasonal_parquet.json  solo_severehazard_risk_annual_parquet.json  solo_severehazard_risk_vop_seasonal_parquet.json
backend/scripts/: embed_stac.py  export_openapi.py
backend/src/atlas_assistant/: __init__.py  agent.py  api.py  context.py  dataset.py  settings.py  state.py
backend/src/atlas_assistant/tools/: dataset.py  plot.py  sql.py
backend/tests/: conftest.py  test_agent.py  test_api.py  test_dataset.py  test_settings.py
backend/tests/cassettes/test_agent/: test_kenya_crops.yaml
backend/tests/data/: haz_exposure_cmip6_ssa_jagermeyr_historic_severe_int.json
(+186 files in other folders)
